fixed the bug on Location fetching
